Upgraded to EJBCA Community 8.0